compiler/testData/diagnostics/tests/when/testTask/TrueCondition.kt
fun foo() = when {
    true -> <!UNRESOLVED_REFERENCE!>print<!>(0)
    else -> {}
}
